--- a/templates/home.html
+++ b/templates/home.html
@@ -195,7 +195,7 @@
                     <a href="https://ingressive.org" style="font-size: 18px;">
                         <img class="img" src="{% static 'img/i4glogo.png' %}" />
                     </a>
-                    <a href="https://internship.zuri.com" style="font-size: 18px;">
+                    <a href="https://internship.zuri.team" style="font-size: 18px;">
                         <img class="img" src="{% static 'img/hnglogo.png' %}" />
                     </a> 
                 </p>
@@ -208,7 +208,7 @@
                     <a href="https://ingressive.org">
                         <img class="img" src="{% static 'img/i4glogo.png' %}" />
                     </a>
-                    <a href="https://training.zuri.com">
+                    <a href="https://training.zuri.team">
                         <img class="img" src="{% static 'img/zurilogo.png' %}" />
                     </a> 
                 </p>
