--- a/templates/home.html
+++ b/templates/home.html
@@ -192,10 +192,10 @@
                 <div class="block">
                 <h2 id="exp">Work Experience </h2>
                 <p style="font-size: 22px;">Zuri Internship
-                    <a href="https://ingressive.org" style="font-size: 18px;">
+                    <a href="https://ingressive.org" target="_blank">
                         <img class="img" src="{% static 'img/i4glogo.png' %}" />
                     </a>
-                    <a href="https://hng.tech" style="font-size: 18px;">
+                    <a href="https://hng.tech" target="_blank">
                         <img class="img" src="{% static 'img/hnglogo.png' %}" />
                     </a> 
                 </p>
@@ -205,10 +205,10 @@
                 </ul>
                 
                 <p style="font-size: 22px;">Zuri Training
-                    <a href="https://ingressive.org">
-                        <img class="img" src="{% static 'img/i4glogo.png' %}" />
+                    <a href="https://ingressive.org" target="_blank">
+                        <img class="img" src="{% static  'img/i4glogo.png' %}" />
                     </a>
-                    <a href="https://zuri.team">
+                    <a href="https://zuri.team" target="_blank">
                         <img class="img" src="{% static 'img/zurilogo.png' %}" />
                     </a> 
                 </p>
